syntax = "proto3";

package org.example;

message PublishTemplateRequest {
  string request_type = 1;       // Тип запроса
  string template_content = 2;    // Содержимое шаблона
  string template_name = 3;       // Имя шаблона
  string author = 4;              // Автор шаблона
}

message PublishTemplateResponse {
  string template_name = 1;       // Имя шаблона
  string author = 2;              // Автор шаблона
  string status = 3;              // Статус публикации (например, APPROVED или REJECTED)
  string description = 4;         // Описание ошибки (если статус REJECTED)
  string comment = 5;             // Комментарий к шаблону (если статус APPROVED)
  int32 rating = 6;               // Рейтинг шаблона (если статус APPROVED)
}

service TemplateModeration {
  rpc PublishTemplate(PublishTemplateRequest) returns (PublishTemplateResponse);
}
